# powerbi-project

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION_STRUCTURE.md  QUICKSTART.md  README.md  check_classification.py  main.py  main_old.py  pages.json  pyproject.toml  requirements.txt  run.bat  run.sh
ai_analysis_output/: 01_EDA_REPORT.md  02_DAX_OPTIMIZATION.md  03_PERFORMANCE_ANALYSIS.md  04_DATA_QUALITY.md
docs/: pbip_structure.md
output/: .gitignore
parsers/: parse_analysis.py  parse_column_usage.py  parse_datasources.py  parse_measures.py  parse_pages.py  parse_relationships.py  parse_tables.py
pbi-mcp-enhanced/: __init__.py  analyze_pbip.py  example_bpr_usage.py  main.py  preflight_check.py  quickstart.py  run.py
pbi-mcp-enhanced/analyzers/: __init__.py  column_analyzer.py  hierarchy_analyzer.py  measure_analyzer.py  relationship_analyzer.py  role_analyzer.py  table_analyzer.py
pbi-mcp-enhanced/parsers/: __init__.py  definition_parser.py  model_bim_parser.py  pbip_parser.py  tmdl_parser.py
pbi-mcp-enhanced/report/: __init__.py  datatype_generator.py  header_generator.py  measures_generator.py  (+5 more)
report/: __init__.py  base_documentation_generator.py  compliance_report_generator.py  extended_documentation_generator.py  technical_documentation_generator.py
scoring/: __init__.py  engine.py  rules.yaml
scripts/: QUICKSTART.md  README.md  README_OLLAMA.md  __init__.py  check_types.py  debug_data_loading.py  documentation_generator.py  inspect_tmdl.py  ollama_client.py  ollama_generator.py
tests/: __init__.py  test_analyzers.py  test_bug5_relationship_parsing.py  test_parsers.py  test_pbip.py  test_pbip_parser.py  test_report.py  test_statistics.py  test_visualizations.py
visualizers/: __init__.py  complexity_heatmap.py  datatype_distribution.py  measure_dependency.py  relationship_graph.py  schema_distribution.py
(+20 files in other folders)
