[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerbi-analyzer"
version = "2.0.0"
description = "Modular semantic model analyzer for Power BI projects (.pbip)"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Power BI Analyzer Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.scripts]
powerbi-analyzer = "main:main"
